<resources>
    <string name="app_name">travelAccountBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_id">ID</string>
    <string name="hint_pw">PW</string>
    <string name="country_select">▼국가 선택</string>
    <string name="login_button">로그인</string>
    <string name="signup_text">회원가입</string>
</resources>