<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="visible"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_box"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_id"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_pw"
            android:inputType="textPassword"
            android:padding="12dp" />

        <TextView
            android:id="@+id/textViewCountrySelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
            android:paddingVertical="8dp"
            android:text="@string/country_select"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            android:text="@string/login_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/textViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/signup_text"
        android:textColor="@color/black"
        android:layout_gravity="center"
        />
</LinearLayout>
